--- a/src/ui/globals.css
+++ b/src/ui/globals.css
@@ -88,7 +88,7 @@
 .gl-formContainer {
   padding: 32px 80px 64px;
   background: #ffffff;
-  border: 1px solid rgba(21, 24, 51, 0.04);
+  border: var(--border-card);
   box-shadow: 0px 32px 40px rgba(0, 9, 92, 0.12);
   flex-grow: 1;
   flex-shrink: 1;
