--- a/src/features/system/layout/components/header/SystemHeader.css
+++ b/src/features/system/layout/components/header/SystemHeader.css
@@ -1,9 +1,6 @@
 .headerWrapper {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+  position: relative;
   z-index: 10;
-  transition: box-shadow 0.5s ease-in, transform 0.2s ease-in;
 
   display: flex;
   align-items: center;
@@ -15,6 +12,16 @@
   }
 }
 
+.fixed {
+  position: fixed;
+  top: 0;
+  z-index: 5;
+  left: 0;
+  width: 100%;
+  transition: box-shadow 0.5s ease-in, transform 0.2s ease-in;
+  transform: translate(0, -100%);
+ } 
+
 
 .white {
   background-color: #fff;
@@ -22,15 +29,13 @@
 
 .show {
   transform: translateY(0);
+  opacity: 1;
 }
 
 .hide {
   transform: translate(0, -100%);
 }
 
-.narrowHeader {
-  transform: translateY(-100%);
-}
 
 .landing {
   background: #fff;
