--- a/src/features/system/main/components/hero/components/bubble/Bubble.css
+++ b/src/features/system/main/components/hero/components/bubble/Bubble.css
@@ -1,20 +1,10 @@
-.bubble {
+.bubble :global{
   background-color: var(--color-bubble);
   padding: 12px 16px 12px 20px;
   border-radius: 36px 20px 20px 0px;
-  animation: fade 1s ease-in;
+  animation: fade 0.7s ease-in;
 }
 
-.hint {
-  animation: fade 1s ease-in;
+.hint :global{
+  animation: fade 0.7s ease-in;
 }
-
-@keyframes fade {
-  0% {
-    opacity: 0%;
-  }
- 
-  100% {
-    opacity: 100%;
-  }
- }
