--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -152,3 +152,13 @@ body {
     min-width: auto;
   }
 }
+
+
+@keyframes :global(fade){
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+};
