navcards: fix hover styles

--- a/src/features/system/main/components/hero/components/nav-cards/NavCards.css
+++ b/src/features/system/main/components/hero/components/nav-cards/NavCards.css
@@ -19,6 +19,11 @@
 
   &:hover {
     color: var(--color-text-primary);
+    border: var(--border-card) !important;
+  }
+
+  &:active {
+    border: var(--border-card);
   }
 
   &:last-child {
