--- a/src/ui/globals.css
+++ b/src/ui/globals.css
@@ -96,6 +96,7 @@
   box-shadow: 0px 32px 40px rgba(0, 9, 92, 0.12);
   flex-grow: 1;
   flex-shrink: 1;
+  max-width: 768px;
 
   @media (max-width: 767px) {
     padding: 24px 16px 40px 16px;
