design-system: add offsets

--- a/src/features/system/main/components/hero/components/nav-cards/NavCards.css
+++ b/src/features/system/main/components/hero/components/nav-cards/NavCards.css
@@ -64,8 +64,10 @@
 .title {
   font: var(--title-regular);
   color: var(--color-primary);
+  margin-bottom: 32px;
 
   @media (--mediumSecondDown) {
+    margin-bottom: 32px;
     display: flex;
     justify-content: space-between;
     align-items: center;
