--- a/src/features/system/layout/components/header/navigation/SystemNavigationContainer.css
+++ b/src/features/system/layout/components/header/navigation/SystemNavigationContainer.css
@@ -123,6 +123,8 @@
     background-color: transparent;
     font-size: 16px;
     line-height: 24px;
+    padding-bottom: 4px;
+    padding-top: 4px;
 
     &:hover {
       background-color: transparent !important;
