--- a/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -4,14 +4,12 @@
   gap: 32px 16px;
 
   @media (--mediumSecondDown) {
-    max-width: 100%;
     margin-bottom: 0;
     overflow: scroll;
     overscroll-behavior: contain;
     padding-left: 16px;
-    /* margin-left: -16px;
-    margin-right: -16px; */
-    margin: 0;
+    margin-left: -16px;
+    margin-right: -16px;
     grid-template-columns: 1fr;
     grid-auto-flow: column;
   }
