--- a/src/features/common/getSerializer/components/image/SerializerImage.css
+++ b/src/features/common/getSerializer/components/image/SerializerImage.css
@@ -1,18 +1,71 @@
-.image {
-  margin: 32px auto 0 auto;
-  object-fit: cover;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 928px;
 
-  @media (--smallDown) {
-    margin: 24px auto 0 auto;
+  @media (--mediumDown) {
+    width: 100vw;
   }
 }
-.large {
+
+.imageWrapper {
+  outline: 1px solid #e8e9f2;
+
   width: 100%;
+  flex-grow: 1;
 }
 
-.medium {
-  width: 600px;
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: all 0.3s ease;
 }
-.small {
-  width: 300px;
+
+.buttons {
+  display: flex;
+}
+
+.button {
+  text-decoration: none;
+  align-items: center;
+  cursor: pointer;
+  background: transparent;
+  padding: 0;
+  border: none;
+  outline: 1px solid #e8e9f2;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  font: var(--text14-20);
+  padding: 12px 24px;
+
+  color: var(--text-color-primary);
+  & span {
+    position: relative;
+  }
+
+  & svg {
+    margin-right: 10px;
+  }
+
+  &:hover {
+    border: none;
+    outline: 1px solid #e8e9f2;
+    color: var(--text-color-primary);
+  }
+}
+
+.text {
+  margin-top: 16px;
+}
+
+.fullscreen {
+  position: fixed;
+  z-index: 10000000;
+
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
