--- a/src/ui/Dropdown/Dropdown.css
+++ b/src/ui/Dropdown/Dropdown.css
@@ -4,7 +4,7 @@
   right: 0;
   display: none;
   flex-direction: column;
-  border-radius: 4px;
+  border-radius: 0;
   box-shadow: 0 0 1px 1px rgba(63, 63, 68, 0.04),
     0 4px 12px 0 rgba(63, 63, 68, 0.12);
 }
@@ -46,12 +46,12 @@
   }
 
   &:first-of-type {
-    border-radius: 4px 4px 0 0;
+    border-radius: 0;
   }
 
   &:last-of-type {
     border-bottom: none;
-    border-radius: 0 0 4px 4px;
+    border-radius: 0;
   }
 }
 
