--- a/src/features/system/layout/components/header/navigation/SystemNavigationContainer.css
+++ b/src/features/system/layout/components/header/navigation/SystemNavigationContainer.css
@@ -38,6 +38,11 @@
   padding: 18px 16px;
   border-bottom: none;
 
+  &.active {
+    background: white !important;
+    color: var(--text-color-primary);
+  }
+
   &:hover {
     border-bottom: none;
   }
@@ -56,10 +61,6 @@
     &:last-child {
       border-bottom: none;
     }
-  }
-
-  &.active {
-    background: white;
   }
 }
 
