header: fix links jumping

--- a/src/features/system/layout/components/header/navigation/SystemNavigationContainer.css
+++ b/src/features/system/layout/components/header/navigation/SystemNavigationContainer.css
@@ -166,3 +166,19 @@
 .buttonWrap {
   border: none;
 }
+
+
+.textWide {
+  display: block;
+
+  @media (--largeSecondUp) {
+    display: none;
+  }
+}
+.textNarrow {
+  display: none;
+  
+  @media (--largeSecondUp) {
+    display: block;
+  }
+}
