--- a/src/features/landing/features/newsPage/tag/Tag.css
+++ b/src/features/landing/features/newsPage/tag/Tag.css
@@ -23,3 +23,13 @@
     background: rgba(230, 227, 220, 0.8);
   }
 }
+
+.big {
+  font: var(--text14-20);
+  padding: 4px;
+
+  @media (--smallDown) {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
