--- a/src/features/landing/features/newsItemPage/components/newsItemContent/NewsItemContent.css
+++ b/src/features/landing/features/newsItemPage/components/newsItemContent/NewsItemContent.css
@@ -59,12 +59,19 @@
   flex-wrap: wrap;
 
   @media (--smallDown) {
+    padding-top: 10px;
+    padding-bottom: 10px;
     flex-wrap: nowrap;
     overflow-x: scroll;
     &::-webkit-scrollbar {
       display: none;
     }
   }
+}
+
+.categoriesTagsFooter {
+  padding-left: 0 !important;
+  border-bottom: 1px solid rgba(21, 24, 51, 0.08);
 }
 
 .head {
@@ -74,8 +81,6 @@
 
   @media (--largeDown) {
     margin-bottom: 28px;
-    padding-top: 10px;
-    padding-bottom: 10px;
   }
 }
 
