--- a/src/ui/tag/Tag.css
+++ b/src/ui/tag/Tag.css
@@ -12,7 +12,6 @@
 
   &:hover {
     color: var(--text-color-primary);
-    background: rgba(247, 246, 242, 0.8);
   }
 }
 
@@ -31,5 +30,24 @@
   @media (--smallDown) {
     font-size: 14px;
     line-height: 20px;
+  }
+}
+
+.huge {
+  font: var(--text16-24);
+  padding: 12px 16px;
+
+  @media (--smallDown) {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+.active {
+  background: #151833;
+  color: #ffffff;
+
+  &:hover {
+    color: #ffffff;
   }
 }
