--- a/src/ui/tag/Tag.css
+++ b/src/ui/tag/Tag.css
@@ -2,7 +2,7 @@
   color: var(--text-color-primary);
   font: var(--text12-16);
   padding: 4px;
-
+  display: inline-block;
   background: #f7f6f2;
   text-decoration: none;
   margin-right: 2px;
