fix offsets in serializer blocks

--- a/src/features/landing/features/news/newsItemPage/components/newsItemContent/NewsItemContent.css
+++ b/src/features/landing/features/news/newsItemPage/components/newsItemContent/NewsItemContent.css
@@ -26,6 +26,8 @@
   display: flex;
   align-items: baseline;
   position: relative;
+  text-decoration: none;
+
   &::after {
     position: absolute;
     content: '';
