--- a/src/features/system/for-doctors/ForDoctorsPage.css
+++ b/src/features/system/for-doctors/ForDoctorsPage.css
@@ -1,13 +1,17 @@
 .wrapper {
   display: flex;
   justify-content: space-between;
+
+  @media (--largeDown) {
+    display: block;
+  }
 }
 
 .main {
   margin-right: 32px;
 
   @media (--largeDown) {
-   margin-right: 0;
+    margin-right: 0;
   }
 }
 
