--- a/src/features/system/for-doctors/ForDoctorsPage.css
+++ b/src/features/system/for-doctors/ForDoctorsPage.css
@@ -11,11 +11,28 @@
   margin-right: 32px;
 
   @media (--largeDown) {
-    margin-right: 0;
+    margin: 0 auto;
   }
 }
 
 .mainContainer {
   padding-left: 16px;
   padding-right: 16px;
+}
+
+.asideWrapper {
+  display: flex;
+  flex-direction: column;
+  
+  @media (--largeDown) {
+    display: none;
+  }
+}
+
+.dividerMobile {
+  display: none;
+
+  @media (--largeDown) {
+    display: block;
+  }
 }
