--- a/src/features/system/for-doctors/components/aside/Aside.css
+++ b/src/features/system/for-doctors/components/aside/Aside.css
@@ -1,6 +1,10 @@
-
-.resourcesWrap {
+.itemsWrap {
   max-width: 256px;
+  margin-bottom: 40px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   @media (--largeDown) {
     display: none;
@@ -11,7 +15,6 @@
   margin-bottom: 16px;
   font: var(--text18-28);
 }
-
 
 .item {
   margin-bottom: 12px;
@@ -30,7 +33,7 @@
 
 .link {
   font: var(--text14-20);
-  color:  #82839B !important;
+  color: #82839b !important;
 }
 
 .textContainer {
