--- a/src/features/system/for-doctors/ForDoctorsPage.css
+++ b/src/features/system/for-doctors/ForDoctorsPage.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-  margin-right: 32px;
+  
 
   @media (--largeDown) {
     margin: 0 auto;
@@ -23,6 +23,7 @@
 .asideWrapper {
   display: flex;
   flex-direction: column;
+  margin-left: 32px;
   
   @media (--largeDown) {
     display: none;
