--- a/src/ui/antd-custom.less
+++ b/src/ui/antd-custom.less
@@ -45,3 +45,7 @@
   margin-bottom: 0;
   font: var(--text16-24);
 }
+
+.radioButtonStyle__Button .ant-radio-group.ant-radio-group .ant-radio-wrapper {
+  margin-right: 4px !important;
+}
