--- a/src/features/system/main/components/hero/components/bubble/Bubble.css
+++ b/src/features/system/main/components/hero/components/bubble/Bubble.css
@@ -1,8 +1,8 @@
-.bubble :global{
+.bubble {
   background-color: var(--color-bubble);
   padding: 12px 16px 12px 20px;
   border-radius: 36px 20px 20px 0px;
-  animation: fade 0.7s ease-in;
+  animation: fade 1s ease-in;
   font: var(--text16-24);
   display: inline-block;
 
@@ -13,6 +13,16 @@
   }
 }
 
-.hint :global{
-  animation: fade 0.7s ease-in;
+.hint {
+  animation: fade 1s ease-in;
+}
+
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
