--- a/src/ui/antd-custom.less
+++ b/src/ui/antd-custom.less
@@ -48,4 +48,5 @@
 
 .radioButtonStyle__Button .ant-radio-group.ant-radio-group .ant-radio-wrapper {
   margin-right: 4px !important;
+  white-space: nowrap !important;
 }
