--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -98,7 +98,7 @@ body {
   --color-text-secondary: #6f717f;
 
   /* borders */
-  --border-card: 1px solid rgba(21, 24, 51, 0.04);
+   --border-card: 1px solid rgba(21,24,51,.04);
 
   /* styles */
   font-family: var(--fontFamily);
