fix styles in tags

--- a/src/ui/tag/Tag.css
+++ b/src/ui/tag/Tag.css
@@ -3,7 +3,7 @@
   font: var(--text12-16);
   padding: 4px;
   display: inline-block;
-  background: #e6e3dc;
+  background: #f7f6f2;
   text-decoration: none;
   margin-right: 4px;
   cursor: pointer;
