--- a/src/features/landing/features/news/newsCard/NewsCard.css
+++ b/src/features/landing/features/news/newsCard/NewsCard.css
@@ -49,8 +49,14 @@
   margin-top: 8px;
   display: flex;
 
+  width: 100%;
+  overflow-x: scroll;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   & a {
-   margin-right: 2px;
+    margin-right: 2px;
   }
 }
 
