--- a/src/features/system/for-doctors/ForDoctorsPage.css
+++ b/src/features/system/for-doctors/ForDoctorsPage.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   @media (--largeDown) {
     display: block;
@@ -8,17 +8,17 @@
 }
 
 .main {
-  
+  margin-right: 102px;
 
   @media (--largeDown) {
     margin: 0 auto;
+    margin-right: auto;
   }
 }
 
 .mainContainer {
   padding-left: 16px;
   padding-right: 16px;
-
 
   @media (--largeDown) {
     padding-left: 0;
@@ -29,8 +29,8 @@
 .asideWrapper {
   display: flex;
   flex-direction: column;
-  margin-left: 32px;
-  
+  margin-right: auto;
+
   @media (--largeDown) {
     display: none;
   }
