--- a/src/features/system/layout/components/footer/system-footer-menu/SystemFooterMenu.css
+++ b/src/features/system/layout/components/footer/system-footer-menu/SystemFooterMenu.css
@@ -1,4 +1,3 @@
-
 .navigation {
   margin-bottom: 64px;
   flex-grow: 1;
@@ -16,17 +15,17 @@
     flex-direction: column;
 
     & .link {
-      color: var(--color-text-primary); 
+      color: var(--color-text-primary);
       padding-top: 10px;
       padding-bottom: 13px;
-      border-top: 1px solid rgba(21,24,51, 0.08);
+      border-top: 1px solid rgba(21, 24, 51, 0.08);
       margin-right: 0;
       display: flex;
       justify-content: space-between;
       align-items: center;
 
       &:last-child {
-        border-bottom: 1px solid rgba(21,24,51, 0.08);
+        border-bottom: 1px solid rgba(21, 24, 51, 0.08);
       }
     }
   }
@@ -34,6 +33,19 @@
 
 .link {
   padding: 6px;
+  border-bottom: 0;
+
+  &:hover {
+    border-bottom: 0;
+  }
+
+  &:active {
+    border-bottom: 0;
+  }
+
+  &:focus {
+    border-bottom: 0;
+  }
 }
 
 .desktopWrapper {
