--- a/src/features/system/layout/components/header/system-mobile-menu/SystemMobileMenu.css
+++ b/src/features/system/layout/components/header/system-mobile-menu/SystemMobileMenu.css
@@ -8,7 +8,7 @@
   display: flex;
   align-self: center;
   justify-content: space-between;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 }
 
 .logo {
@@ -22,6 +22,7 @@
   width: 48px;
   height: 48px;
   cursor: pointer;
+  margin-left: auto;
 }
 
 .helpButtonWrap {
