--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600,700&subset=cyrillic&font-display=fallback');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600,700&subset=cyrillic&font-display=block');
 
 @font-face {
   font-family: 'Muller Regular';
@@ -14,6 +14,7 @@
       format('woff'),
     url('/static/fonts/Muller-Regular/muller-regular-webfont.ttf')
       format('truetype');
+  font-display: block;
 }
 
 *,
@@ -98,7 +99,7 @@ body {
   --color-text-secondary: #6f717f;
 
   /* borders */
-   --border-card: 1px solid rgba(21,24,51,.04);
+  --border-card: 1px solid rgba(21, 24, 51, 0.04);
 
   /* styles */
   font-family: var(--fontFamily);
