--- a/src/features/common/getSerializer/components/image/SerializerImage.css
+++ b/src/features/common/getSerializer/components/image/SerializerImage.css
@@ -28,6 +28,7 @@
   height: 100%;
   object-fit: cover;
   transform: all 0.3s ease;
+  background: white;
 }
 
 .buttons {
@@ -80,4 +81,5 @@
   left: 0;
   right: 0;
   bottom: 0;
+  cursor: zoom-out;
 }
