fix titles in articles and news

--- a/src/features/system/for-doctors/components/articles-item-content/ArticlesItemContent.css
+++ b/src/features/system/for-doctors/components/articles-item-content/ArticlesItemContent.css
@@ -83,6 +83,7 @@
 
   @media (--largeDown) {
     margin-bottom: 28px;
+    width: 100%;
   }
 }
 
@@ -126,5 +127,3 @@
   height: 100%;
   object-fit: cover;
 }
-
-
