remove scroll lock and fix main page link

--- a/src/features/system/main/components/hero/SystemHero.css
+++ b/src/features/system/main/components/hero/SystemHero.css
@@ -23,6 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: center;
   margin-bottom: 40px;
 
   @media (--smallDown) {
