experts/partners list: fix mobile styles

--- a/src/features/landing/features/experts/organisms/ExpertCard/ExpertCard.css
+++ b/src/features/landing/features/experts/organisms/ExpertCard/ExpertCard.css
@@ -6,6 +6,10 @@
   align-items: center;
   width: 220px;
   color: var(--text-color-primary);
+
+  @media (--smallDown) {
+    width: auto;
+  }
 }
 
 .expertCard .link {
