--- a/src/features/landing/organisms/PartnerCard/PartnerCard.css
+++ b/src/features/landing/organisms/PartnerCard/PartnerCard.css
@@ -4,6 +4,10 @@
   align-items: center;
   width: 220px;
   color: var(--text-color-primary);
+
+  @media (--smallDown) {
+    width: auto;
+  }
 }
 
 .logo {
