for-hospitals: fix offset

--- a/src/features/system/for-hospitals/components/Hero/Hero.css
+++ b/src/features/system/for-hospitals/components/Hero/Hero.css
@@ -9,6 +9,10 @@
   }
 }
 
+.text {
+  max-width: 768px;
+}
+
 .textImage {
   display: block;
 
@@ -27,3 +31,4 @@
 .list > * + * {
   margin-top: 16px;
 }
+
