articles: fix layout

--- a/src/features/landing/features/news/newsCard/NewsCard.css
+++ b/src/features/landing/features/news/newsCard/NewsCard.css
@@ -7,9 +7,18 @@
   }
 
   &:hover {
+    border-bottom: 0;
     & .title {
       color: var(--color-primary);
     }
+  }
+
+  &:active {
+    border-bottom: 0;
+  }
+
+  &:focus {
+    border-bottom: 0;
   }
 }
 
