--- a/src/features/system/for-doctors/components/articles-item-content/ArticlesItemContent.css
+++ b/src/features/system/for-doctors/components/articles-item-content/ArticlesItemContent.css
@@ -103,7 +103,7 @@
 .imageWrapper {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 0; 
 
   width: 104px;
   height: 104px;
@@ -126,4 +126,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.textWrapper {
+  max-width: 768px;
 }
