--- a/src/features/system/main/components/hero/components/bubble/Bubble.css
+++ b/src/features/system/main/components/hero/components/bubble/Bubble.css
@@ -13,11 +13,11 @@
   }
 }
 
-.hint {
+/* .hint {
   animation: fade 1s ease-in;
-}
+} */
 
-
+/* 
 @keyframes fade {
   0% {
     opacity: 0;
@@ -25,4 +25,4 @@
   100% {
     opacity: 1;
   }
-}
+} */
