main-ask: fix scroll

--- a/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -6,7 +6,7 @@
   @media (--mediumSecondDown) {
     margin-bottom: 0;
     overflow: scroll;
-    overscroll-behavior: contain;
+    overscroll-behavior: unset;
     padding-left: 16px;
     margin-left: -16px;
     margin-right: -16px;
