Checklist styles update

--- a/src/features/landing/features/request/page/Request.css
+++ b/src/features/landing/features/request/page/Request.css
@@ -37,3 +37,14 @@
     margin: 0 0 24px 0;
   }
 }
+
+
+.text {
+  margin: 0;
+  text-align: left;
+  margin-bottom: 16px;
+
+  @media (--smallDown) {
+    margin-bottom: 16px;
+  }
+}
