--- a/src/features/system/checklist/ChecklistPage.css
+++ b/src/features/system/checklist/ChecklistPage.css
@@ -9,8 +9,11 @@
 }
 
 .text {
-  margin-bottom: 48px;
+  margin: 0;
+  text-align: left;
+  margin-bottom: 16px;
+
   @media (--smallDown) {
-    margin-bottom: 40px;
+    margin-bottom: 16px;
   }
 }
