--- a/src/features/system/for-hospitals/components/Hero/Hero.css
+++ b/src/features/system/for-hospitals/components/Hero/Hero.css
@@ -47,3 +47,15 @@
   justify-content: center;
   align-items: center;
 }
+
+
+.image {
+  width: 48px;
+  height: 48px;
+  margin-left: 16px;
+
+  @media (--smallDown) {
+    width: 32px;
+    height: 32px;
+  }
+}
