--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -11,6 +11,8 @@
   }
 }
 
+
+
 /* kind */
 
 .primary {
@@ -18,6 +20,10 @@
   color: #fff;
   background-color: var(--color-primary);
 
+  &:hover {
+    color: #fff;
+  }
+  
   &:hover:enabled,
   &:focus:enabled {
     background-color: #354ad4;
@@ -74,7 +80,7 @@
 }
 
 .large {
-  padding: 11px 28px 13px 28px;
+  padding: 12px 28px;
 }
 
 .medium {
@@ -102,4 +108,26 @@
   font: var(--text-18-28);
 
   border-radius: 0;
+}
+
+.buttonIcon {
+ /* width: 48px;
+  height: 48px;*/
+  margin-left: 16px;
+
+  @media (--smallDown) {
+  /*  width: 32px;
+    height: 32px;*/
+  }
+}
+
+.large .buttonIcon {
+  width: 40px;
+  height: 40px;
+  margin: -3px 0 3px 16px;
+
+  @media (--smallDown) {
+    width: 24px;
+    height: 24px;
+  }
 }
