--- a/src/features/system/main/components/hero/components/nav-cards/NavCards.css
+++ b/src/features/system/main/components/hero/components/nav-cards/NavCards.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   justify-content: space-between;
   border: var(--border-card);
+  background: #fff;
   border-bottom-width: 1px !important;
 
 
