--- a/src/features/landing/features/home/organisms/Corporate/components/Partners/components/TrustPartners/TrustPartners.css
+++ b/src/features/landing/features/home/organisms/Corporate/components/Partners/components/TrustPartners/TrustPartners.css
@@ -27,6 +27,7 @@
 .mainLogo {
   width: 146px !important;
   max-height: 56px !important;
+  height: 56px !important;
 
   @media (--smallDown) {
     transform: scale(0.65) translate(0, -10px);
