--- a/src/features/system/main/components/hero/components/nav-cards/NavCards.css
+++ b/src/features/system/main/components/hero/components/nav-cards/NavCards.css
@@ -65,6 +65,11 @@
 .content {
   padding: 16px 24px 24px 20px;
 
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   @media (--mediumSecondDown) {
     padding: 16px 16px 24px 16px;
   }
@@ -72,8 +77,9 @@
 
 .title {
   font: var(--title-system);
-  color: var(--color-primary);
+  color: var(--color-text-primary);
   margin-bottom: 32px;
+  transition: all 0.3s ease-in-out;
 
   @media (--mediumSecondDown) {
     margin-bottom: 4px;
@@ -92,11 +98,27 @@
   padding: 16px 20px 20px 20px;
   color: var(--color-primary);
   border-top: 1px solid rgba(21, 24, 51, 0.08);
+  transition: all 0.3s ease-in-out;
 
   @media (--mediumSecondDown) {
     display: none;
   }
+  
+ 
 }
+
+
+
+  .card:hover .block {
+    background: var(--color-primary);
+    color: #fff;
+
+  }
+
+  .card:hover .title {
+    color: var(--color-primary);
+  }
+
 
 .mobileIcon {
   display: none;
